fix(core): hide placeholder without visible overflow

--- a/projects/core/components/primitive-textfield/value-decoration/value-decoration.style.less
+++ b/projects/core/components/primitive-textfield/value-decoration/value-decoration.style.less
@@ -2,14 +2,11 @@
     position: absolute;
     display: block;
     height: 1.25rem;
-    max-width: calc(100% - 2rem);
+    max-width: 100%;
     margin: -1.25rem 0;
     padding: 0.625rem 0;
     box-sizing: content-box;
     color: var(--tui-text-01);
-    white-space: nowrap;
-    overflow: hidden;
-    pointer-events: none;
 
     &._table {
         position: static;
@@ -27,7 +24,12 @@
 }
 
 .t-filler {
+    display: inline-block;
+    overflow: hidden;
     color: var(--tui-text-03);
+    text-overflow: ellipsis;
+    max-width: 100%;
+    white-space: nowrap;
 
     :host-context(tui-textfield[data-mode='onDark']) & {
         color: var(--tui-text-03-night);
